added foto portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,8 +50,7 @@
         </header>
     <main>
      <!--Наши проекты -->
-        <section class="projects-container">
-            <div class="container">
+        <section class="container projects-container">
                 <!-- <h1>Наши проекты</h1> -->
                 <ul class="buttons">
                     <li><button type="button" class="btn">Все</button></li>
@@ -64,7 +63,17 @@
                     <li class="project-card">
                         <a href="#" class="project-link">
                             <div class="project-thumb">
-                                 <img src="./images/portfolio1.jpg" alt="Технокряк" width="370" height="294">
+                                <picture>
+                                    <source
+                                    srcset="./images/portfolio/portfolio1.webp 1x,
+                                    /images/portfolio/portfolio1@2x.webp 2x
+                                    "
+                                    type="image/webp"
+                                    >
+                                    <img src="./images/portfolio/portfolio1.jpg 1x,
+                                    ./images/portfolio/portfolio1@2x.jpg 2x" 
+                                    alt="Технокряк">
+                                </picture>
                                 <div class="project-overlay">
                                     <p class="description-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                 платформу для цифрового
@@ -80,8 +89,16 @@
                     <li class="project-card">
                         <a href="#" class="project-link">
                             <div class="project-thumb">
-                                <img src="./images/portfolio2.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
-                                <div class="project-overlay">
+                                <picture>
+                                    <source srcset="
+                                    ./images/portfolio/portfolio2.webp 1x,
+                                    ./images/portfolio/portfolio2@2x.webp 2x
+                                                                    " type="image/webp">
+                                    <img src="./images/portfolio/portfolio2.jpg,
+                                    ./images/portfolio/portfolio2@2x.jpg 2x"
+                                     alt="Постер New Orlean vs Golden Star">
+                                </picture>
+                                 <div class="project-overlay">
                                     <p class="description-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                     платформу для цифрового
                                     шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -96,7 +113,17 @@
                     <li class="project-card">
                         <a href="#" class="project-link">
                             <div class="project-thumb">
-                                <img src="./images/portfolio3.jpg" alt="Ресторан Seafood" width="370" height="294">
+                                <picture>
+                                    <source
+                                    srcset="./images/portfolio/portfolio3.webp 1x,
+                                    ./images/portfolio/portfolio3@2x.webp 2x
+                                    "
+                                    type="image/webp"
+                                    >
+                                    <img src="./images/portfolio/portfolio3.jpg,
+                                    ./images/portfolio/portfolio3@2x.jpg 2x"  
+                                    alt="Ресторан Seafood">
+                                </picture>
                                 <div class="project-overlay">
                                     <p class="description-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                 платформу для цифрового
@@ -112,7 +139,17 @@
                     <li class="project-card">
                         <a href="#" class="project-link">
                             <div class="project-thumb">
-                                <img src="./images/portfolio4.jpg" alt="Проект Prime" width="370" height="294">
+                                <picture>
+                                    <source
+                                    srcset="./images/portfolio/portfolio4.webp 1x,
+                                    ./images/portfolio/portfolio4@2x.webp 2x
+                                    "
+                                    type="image/webp"
+                                    >
+                                    <img src="./images/portfolio/portfolio4.jpg,
+                                    ./images/portfolio/portfolio4@2x.jpg 2x"  
+                                    alt="Проект Prime">
+                                </picture>
                                 <div class="project-overlay">
                                     <p class="description-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                 платформу для цифрового
@@ -128,7 +165,17 @@
                     <li class="project-card">
                         <a href="#" class="project-link">
                             <div class="project-thumb">
-                                <img src="./images/portfolio5.jpg" alt="Проект Boxes" width="370" height="294">
+                                <picture>
+                                    <source
+                                    srcset="./images/portfolio/portfolio5.webp 1x,
+                                    ./images/portfolio/portfolio5@2x.webp 2x
+                                    "
+                                    type="image/webp"
+                                    >
+                                    <img src="./images/portfolio/portfolio5.jpg,
+                                    ./images/portfolio/portfolio5@2x.jpg 2x" 
+                                    alt="Проект Boxes">
+                                </picture>                               
                                 <div class="project-overlay">
                                     <p class="description-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                 платформу для цифрового
@@ -144,7 +191,17 @@
                     <li class="project-card">
                         <a href="#" class="project-link">
                             <div class="project-thumb">
-                                <img src="./images/portfolio6.jpg" alt="Inspiration has no Borders" width="370" height="294">
+                                <picture>
+                                    <source
+                                    srcset="./images/portfolio/portfolio6.webp 1x,
+                                    ./images/portfolio/portfolio6@2x.webp 2x
+                                    "
+                                    type="image/webp"
+                                    >
+                                    <img src="./images/portfolio/portfolio6.jpg,
+                                    ./images/portfolio/portfolio6@2x.jpg 2x"  
+                                    alt="Inspiration has no Borders">
+                                </picture>                               
                                 <div class="project-overlay">
                                     <p class="description-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                 платформу для цифрового
@@ -160,7 +217,17 @@
                     <li class="project-card">
                         <a href="#" class="project-link">
                             <div class="project-thumb">
-                                <img src="./images/portfolio7.jpg" alt="Издание Limited Edition" width="370" height="294">
+                                <picture>
+                                    <source
+                                    srcset="./images/portfolio/portfolio7.webp 1x,
+                                    ./images/portfolio/portfolio7@2x.webp 2x
+                                    "
+                                    type="image/webp"
+                                    >
+                                    <img src="./images/portfolio/portfolio7.jpg,
+                                    ./images/portfolio/portfolio7@2x.jpg 2x" 
+                                    alt="Издание Limited Edition">
+                                </picture>                               
                                 <div class="project-overlay">
                                     <p class="description-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                 платформу для цифрового
@@ -176,7 +243,17 @@
                     <li class="project-card">
                         <a href="#" class="project-link">
                             <div class="project-thumb">
-                                <img src="./images/portfolio8.jpg" alt="Проект LAB" width="370" height="294">
+                                <picture>
+                                    <source
+                                    srcset="./images/portfolio/portfolio8.webp 1x,
+                                    ./images/portfolio/portfolio8@2x.webp 2x
+                                    "
+                                    type="image/webp"
+                                    >
+                                    <img src="./images/portfolio/portfolio8.jpg,
+                                    ./images/portfolio/portfolio8@2x.jpg 2x" 
+                                    alt="Проект LAB">
+                                </picture>                                
                                 <div class="project-overlay">
                                     <p class="description-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                 платформу для цифрового
@@ -192,7 +269,17 @@
                     <li class="project-card">
                         <a href="#" class="project-link">
                             <div class="project-thumb">
-                                <img src="./images/portfolio9.jpg" alt="Growing Business" width="370" height="294">
+                                <picture>
+                                    <source
+                                    srcset="./images/portfolio/portfolio9.webp 1x,
+                                    ./images/portfolio/portfolio9@2x.webp 2x
+                                    "
+                                    type="image/webp"
+                                    >
+                                    <img src="./images/portfolio/portfolio9.jpg,
+                                    ./images/portfolio/portfolio9@2x.jpg 2x" 
+                                    alt="Growing Business">
+                                </picture>                               
                                 <div class="project-overlay">
                                     <p class="description-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                 платформу для цифрового
@@ -206,7 +293,6 @@
                         </a>
                     </li>
                 </ul>
-            </div>
         </section>
     </main>
     <!-- Футер -->
