--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
             <button data-modal-open class="hero-button ">Заказать услугу</button>
         </section>
         <!-- Особенности работы -->
-        <section class="container">
+        <section>
+            <div class="container">
             <!-- <h2>Особенности</h2> -->
-            <ul class="features">
+                <ul class="features">
                     <li class="features-item">
                         <div class="features-icon">
                             <svg class="antenna" width="65" height="70">
@@ -97,7 +98,8 @@
                         <h3 class="features-title">Современные технологии</h3>
                         <p class="features-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
-            </ul>   
+                </ul>
+            </div>
         </section>    
         <!-- Чем мы занимаемся -->
         <section class="section workes-container">
@@ -151,9 +153,10 @@
             </div>
         </section>
         <!-- Наша команда -->
-        <section class="container team-container">
-            <h2 class="section-title">Наша команда</h2>
-            <ul class="team">
+        <section class="team-container">
+            <div class="container">
+                <h2 class="section-title">Наша команда</h2>
+                <ul class="team">
                     <li class="team-item">
                         <picture>
                             <source
@@ -362,12 +365,14 @@
                             </li>
                         </ul>
                     </li>
-            </ul>
+                </ul>
+            </div>
         </section>
         <!-- Постоянные клиенты -->
-        <section class="container">
-             <h2 class="section-title">Постоянные клиенты</h2>
-            <ul class="clients">
+        <section>
+            <div class="container">
+                <h2 class="section-title">Постоянные клиенты</h2>
+                <ul class="clients">
                     <li class="clients-list">
                         <a href="#" class="client-link">
                             <svg class="logo-1" width="44" height="49">
@@ -410,12 +415,14 @@
                             </svg>
                         </a>
                     </li>
-            </ul>
+                </ul>
+            </div>
         </section>
     </main>    
     <!-- Футер -->
     <footer class="footer">
-        <div class="footer-content">
+        <div class="container">
+            <div class="footer-content">
                 <a href="#" class="logo footer-logo"><span>Web</span>Studio</a>
                 <address>
                     <ul class="contacte">
@@ -424,8 +431,8 @@
                         <li class="contacte-item"><a href="tel:+380961111111" class="footer-link">+38 096 111 11 11</a></li>
                     </ul>
                 </address>
-        </div>
-        <div class="resources">
+            </div>
+            <div class="resources">
                 <h3 class="resources-title">присоединяйтесь</h3>
                 <ul class="resources-list">
                     <li class="resources-item">
@@ -457,8 +464,8 @@
                         </a>
                     </li>
                 </ul>
-        </div>
-        <div>
+            </div>
+            <div>
                 <form action="#" class="subscription">
                     <label for="mail" class="subscription-text">Подпишитесь на рассылку</label>
                     <div class="subscription-btns">
@@ -470,6 +477,7 @@
                         </button>
                     </div>
                 </form>
+            </div>
         </div>
     </footer>
     <!-- Модальное окно -->
